2005-08-09:
    * The config section [global] is now distinct from, and the parent of, [/]. (fumanchu)
    * cherrypy.request.path is now parsed and set before onStartResource filter methods are called. (fumanchu)
    * Absolute Request-URI's are now acceptable, and are converted to relative paths. (fumanchu)
    * A Request-URI of "*" now maps to the [global] config section, and to cherrypy.root._global. (fumanchu)

2005-07-12:
    * CherryPy-2.1.0-beta released. Check http://www.cherrypy.org/wiki/WhatsNewIn21 for instructions on how to upgrade from 2.0. (remi)

2005-07-09:
    * Request entities that are not form params now get stuck in cherrypy.request.body (as a temp file object). (fumanchu)
    * cherrypy.config.update can be called with an the keyword override=False to prevent values from being overwritten.
2005-07-06:
    * Added code-coverage tools. (fumanchu)

2005-06-25:
    * BACKWARD INCOMPATIBILITY: Removed cpg module, renamed _cpserver to server, _cpconfig to config, cperror to _cperror. See http://www.cherrypy.org/wiki/PackageLayout21 (fumanchu)

2005-06-21:
    * New generic HTTPRedirect exception for 3xx responses. (fumanchu)

2005-06-17:
    * Handle all HTTP methods. (fumanchu)

2005-06-16:
    * First check-in of the documentation project (lawouach)

2005-06-11:
    * getSpecialFunction renamed getSpecialAttribute (mikerobi)

2005-06-10:
    * New test suite (no forks, no exec). (fumanchu)
    * New lib/profiler module. (fumanchu)
    * New session filter (mikerobi)
    * New config.getAll function (mikerobi)

2005-06-09:
    * New sessionauthenticatefilter. This replace CSAuthenticate implementation (based on aspect). (Remi)
    * New nsgmlsfilter. Provides XHTML validation (you need NSGMLS installed). (Remi)

2005-06-02:
    * New WSGI server. (Peter)

2005-06-01:
    * Core (_cphttptools) was completely rewritten to use iterators throughout. (fumanchu)
    * HTTP server has been decoupled from _cpserver. (fumanchu)