@@ -1,3 +1,7 @@
+2005-08-17:
+    * The session filter has been simplified, the mechanism for creating multiple sessions has been removed. However .. (mikerobi)
+    * The session filter can placed inside a _cpFilterList to provide an alternative to the default session.            (mikerobi)
+    
 2005-08-09:
     * The config section [global] is now distinct from, and the parent of, [/]. (fumanchu)
     * cherrypy.request.path is now parsed and set before onStartResource filter methods are called. (fumanchu)
